Reset image height to auto and min-height to 100% to correct iOS bug from ver 14 image stretching

--- a/css/style.css
+++ b/css/style.css
@@ -192,7 +192,8 @@ section {
 .imgs3 img,
 .imgs4 img {
  width: 100%; 
- height: 100%;
+ height: auto;
+ min-height: 100%;
 }
 
 .imgs1,
